# ethcc-demo

./: .gitignore  Cargo.toml  deploy.js  package-lock.json  package.json  wasm-dev-chain.json
src/: sample.rs
